# GSTENG-TARS

./: .gitignore  LLAMA_INTEGRATION_GUIDE.md  PHASE1_COMPLETE.md  PHASE2_ADVANCED_ENGINEERING_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_RASPBERRY_PI_COMPLETE.md  PHASE4_REMOTE_ACCESS_COMPLETE.md  PHASE5_VOICE_INTERACTION_COMPLETE.md  PHASE6_GITHUB_VSCODE_COMPLETE.md  PHASE8_REALISTIC_VOICE_PROMPTS_1_2_COMPLETE.md  PHASE8_REALISTIC_VOICE_PROMPTS_3_5_COMPLETE.md  README.md  SENIOR_ENGINEER_COMPLETE.md  SERVO_INTEGRATION_COMPLETE.md  TARS_DEMO_GITHUB_VSCODE.md  config.toml  index.html  package-lock.json  package.json  start-tars-interface.sh  start-tars.bat  tars-demo.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  safety.rs
src-tauri/src/ai/: cloud_llm.rs  local_llm.rs  mod.rs  router.rs
src-tauri/src/approval/: audit.rs  mod.rs  permissions.rs  system.rs
src-tauri/src/code_analysis/: analyzer.rs  ast_parser.rs  mod.rs  parser.rs  pattern_detector.rs  test_generator.rs
src-tauri/src/commands/: github_commands.rs  math_commands.rs  pattern_commands.rs  pdf_commands.rs  pi_commands.rs  remote_commands.rs  servo_commands.rs  test_commands.rs  voice_commands.rs  vscode_commands.rs
src-tauri/src/config/: config.rs  state_manager.rs
src-tauri/src/github/: api.rs  authentication.rs  mod.rs
src-tauri/src/mathematics/: complexity_analyzer.rs  engine.rs  mod.rs  numerical_methods.rs  symbolic_math.rs
src-tauri/src/pdf_manager/: api_server.rs  document_parser.rs  file_watcher.rs  mod.rs  n8n_integration.rs  prompt_executor.rs
src-tauri/src/personality/: coding_standards.rs  engineering_manager.rs  mod.rs  tars_core.rs
src-tauri/src/raspberry_pi/: embedded_interface.rs  hardware_monitor.rs  mod.rs  performance_tuner.rs  (+2 more)
src-tauri/tests/: ai_router_tests.rs  config_tests.rs  mobility_controller_tests.rs  personality_tests.rs
(+51 files in other folders)
