[package]
name = "gsteng"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
once_cell = "1"
tokio-stream = "0.1"
async-trait = "0.1"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
toml = "0.8"
notify = "6"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
rand = "0.8"

# Advanced TTS dependencies
num_cpus = "1.16"

# Hardware control dependencies
rppal = { version = "0.14", optional = true }
gilrs = "0.10"
i2cdev = { version = "0.5", optional = true }
thiserror = "1.0"

# Mathematics dependencies
regex = "1"

[features]
default = []
hardware = ["rppal", "i2cdev"]

[lib]
name = "gsteng"
path = "src/lib.rs"
